--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,7 @@ form textarea {
 
 form button {
   background: none;
-  border: 2px solid black;
+  border: 2px solid white;
   padding: 1rem;
   text-transform: uppercase;
 }
