--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Roboto', Helvetica, sans-serif;
-  background-color: grey;
+  background-color: white;
   margin: 0;
   padding: 0;
 }
@@ -61,7 +61,7 @@ form textarea {
 
 form button {
   background: none;
-  border: 2px solid white;
+  border: 2px solid black;
   padding: 1rem;
   text-transform: uppercase;
 }
